# ESP32-S3-Pitch-Detection-System

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/mylib/: CMakeLists.txt
components/mylib/include/: buttons.h  def.h  fft.h  filters.h  mic.h  test.h  tuner.h  utils.h  var.h  yin.h
components/mylib/src/: buttons.c  fft.c  filters.c  mic.c  test.c  tuner.c  utils.c  yin.c
main/: Untitled-1.txt  main.c
